--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -8,13 +8,15 @@ This series is going to start out intentionally pedantic and simple, to frame th
 
 * [Part 0/x: Trait definitions; defining what we require.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-0-trait-definitions-defining-what-we-require)
 
-* Part 1/x: A very naïve implementation based on sorted lists.
+* [Part 1/x: An obvious implementation based on `HashMap`.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-1-an-obvious-implementation-based-on-hashmap)
 
-* Part 2/x: Organizing the data into tries.
+* Part 2/x: A very naïve implementation based on sorted lists.
 
-* Part 3/x: Adding an index.
+* Part 3/x: Organizing the data into tries.
 
-* Part 4/x: ...
+* Part 4/x: Adding an index.
+
+* Part 5/x: ...
 
 I'd like to think I know exactly where this is going to end up (I have a plan), but for now let's just pretend I know the general direction, and will tell you each time we take a meaningful step.
 
@@ -150,7 +152,7 @@ Let's investigate this 'joy' (50-50 sarcastic-serious, so single quotes) by tryi
 pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 
 	/// incorporates a new bunch of differences into the trace.
-	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>(&mut self, diffs: Iter);
+	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>>(&mut self, diffs: Iter);
 
 	/// An iterator defined by the implementation to produce results.
 	type OutputIterator: Iterator<Item=(&Key, &Val, &Time, isize)>;
@@ -185,7 +187,7 @@ This almost works. If it weren't for that `key` argument, Rust *would* be able t
 
 Why? Because the only things the results could possibly refer *to* are the references supplied as inputs (or references available through them, transitively). What else could these reference possibly refer to that will still be valid after the method returns?
 
-What is going on here, or would be going on without the `key` argument, is what Rust calls "lifetime elision", some handy rules Rust uses to remove the need to explicitly write lifetimes everywhere. But you can, and it is helpful to see to understand what Rust is actually doing. Let's fix that method up above with the right generic lifetimes:
+What is going on here, or would be going on without the `key` argument, is what Rust calls "lifetime elision", some handy rules Rust uses to remove the need to explicitly write lifetimes everywhere. But you can write them explicitly, and it is helpful to see to understand what Rust is actually doing. Let's fix that method up above with the right generic lifetimes:
 
 ```rust
 	/// retrieves differences associated with a specified key.
@@ -206,7 +208,7 @@ So, we need to put some `'a` things in front of our references to make Rust happ
 pub trait Trace<'a, Key: Ord, Val: Ord, Time: Lattice> {
 
 	/// incorporates a new bunch of differences into the trace.
-	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>(&mut self, diffs: Iter);
+	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>>(&mut self, diffs: Iter);
 
 	/// An iterator defined by the implementation to produce results.
 	type OutputIterator: Iterator<Item=(&'a Key, &'a Val, &'a Time, isize)>;
@@ -236,7 +238,7 @@ The fix is pretty simple:
 pub trait Trace<'a, Key: Ord+'a, Val: Ord+'a, Time: Lattice+'a> {
 
 	/// incorporates a new bunch of differences into the trace.
-	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>(&mut self, diffs: Iter);
+	fn add<Iter: Iterator<Item=(Key, Val, Time, isize)>>(&mut self, diffs: Iter);
 
 	/// An iterator defined by the implementation to produce results.
 	type OutputIterator: Iterator<Item=(&'a Key, &'a Val, &'a Time, isize)>;
@@ -253,14 +255,230 @@ The constraint `Key: Ord+'a` means that `Key` needs to implement `Ord` and live 
 
 This whole section may give some insight into the Rust debugging process. We have done a lot of up-front work defining our trait, and scoping out several potential issues that Rust has already forced us to fix by making our method prototypes more specific. I would say that the majority of my time debugging Rust code is spent like this. I've literally spent zero time in an actual debugger, and once written while not necessarily correct, your code pretty much does what it says.
 
-## Part 1: A very naïve version based on lists.
+## Part 1: An obvious implementation based on `HashMap`
+
+Just to start things out, and before trying to be clever at all, let's write an implementation of our trait using Rust's built in `HashMap`. This implementation will be pretty simple, but wasteful with respect to memory usage, and misses out on some important properties we'll want for later on. But, it is a simple example of perhaps the most obvious implementation.
+
+This also gives us a chance to see how to implement traits in Rust, before we start doing harder things.
+
+To implement a trait for a type, here a hashmap from keys of type `K` to vectors of `(V, T, isize)` elements, you write something like so:
+
+```rust
+impl<'a, K, V, T> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
+	
+	// implementation of methods and stuff goes here
+
+}
+```
+
+We just need to add constraints on the type parameters and implement the methods, and we should be good to go. 
+
+### Implementing the methods
+
+We have two methods to implement, `add` and `get`. We know what they are going to look like because of the trait's signature, so let's write down some empty bodies.
+
+```rust
+impl<'a, K, V, T> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
+
+	fn add<Iter: Iterator<Item=(K, V, T, isize)>>(&mut self, diffs: Iter) {
+		unimplemented!()
+	}
+
+	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
+		unimplemented!()
+	}
+
+}
+```
+
+These `unimplemented!()` things are macros indicating the code isn't written yet. They are totally optional, but allow your code to compile without actually returning the right thing yet (`Self::OutputIterator`, which is also not written yet).
+
+### The `add` method
+
+Here is what I would do for the `add` method: 
+
+```rust
+	fn add<Iter: Iterator<Item=(K, V, T, isize)>>(&mut self, diffs: Iter) {
+		for (key, val, time, delta) in diffs {
+			self.entry(key)
+				.or_insert(Vec::new())
+				.push((val, time, delta));
+		}
+	}
+```
+
+There is some syntactic sugar in the form of the `for .. in ..` construct for iterators; because `Iter` implements `Iterator`, we can just use the for loop.
+
+We've also used `HashMap`'s functionality to pretty ergonomically try to find the entry associated with a key, create one if it doesn't exist, and the push the value, time, and delta triple to the end of the list.
+
+This was pretty painless, but we got lucky in a few ways. The `entry` method requires an *owned* instance of `K` because if the entry doesn't exist we need to add it, and the hash map will need to hold on to a copy of the key in that case. However there is only one owned instance of the key for each element in `diffs`, so we were pretty smart to only stash the `(val, time, delta)` triple.
+
+If we tried to use the key twice we would get an error from Rust indicating that we are trying to re-use a variable which has been moved somewhere else. We could consider copying or cloning the key, but that functionality lies behind traits we haven't required of the type `K` yet.
+
+### The `get` method
+
+The `get` method is going to turn into a pain in the butt, mostly because of the restrictive way Rust's `HashMap` is implemented. We will fight against it a little bit, explain how it could be done, and then walk away because we don't really want to be using `HashMap` anyhow.
+
+```rust
+	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
+		Self::OutputIterator::new(self.get(key))
+	}
+```
+
+This looks up `key` in `self` and returns an `Option<&'a Vec<(V, T, isize)>>`. We can use that reference in our output iterator! In particular, a `&'a Vec<(V, T, isize)>` gives us access to all the `&'a V' and `&'a T' references contained therein.
+
+The problem is we don't have a `&'a K` anywhere. That `key` argument is a reference, but not with the right lifetime (remember the cautionary tale from the previous section?). The key obviously exists in the `HashMap`, we just can't get a reference to it, because the hash map's interface is a bit restrictive. There is a way to get a reference to a key once you've used the `entry` method up above, but that requires an owned key to call. We can't stash a second copy of the key in the list with the `(V, T, isize)` tuples because we can't copy or clone it.
+
+Sucks. 
+
+We could consider changing the iterator in the trait definition to be 
+
+```rust
+	Iter: Iterator<Item=(&'a V, &'a T, isize)>
+```
+
+because we know that folks must have a `&K` on hand to call the `get` method. That isn't a horrible idea, but it is limiting; it means that if the user wants the key they either (i) need to use the iterator before moving on to the next key, or (ii) need to clone the key to hold on to it. This is annoying because we know there is a `&'a K` sitting in the hash map, it's just that the hashmap doesn't let us get a handle to it.
+
+Since we aren't acutally going to use this version of the code, let's imagine that the `HashMap`'s `get` method return a reference to both the key and the value, rather than just the value. We still get to write:
+
+```rust
+	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
+		Self::OutputIterator::new(self.get(key))
+	}
+```
+
+because we are just passing the buck to the `OutputIterator` type's `new` method, which we will see next.
+
+### Implementing the types
+
+The `OutputIterator` type isn't going to be wildly complicated. In fact, we could possibly borrow some existing iterator implementations, but we will just roll our own to see how it works. It isn't very complicated. The first thing to do is to define the struct that holds the data we will need for iteration.
+
+```rust
+/// iterates over tuples of references
+pub struct OutputIter<'a, K:'a, V:'a, T:'a> {
+	data: Option<(&'a K, &'a Vec<(V, T, isize)>, usize)>
+}
+```
+
+The `data` field here is, optionally, a triple of key reference, the vector we found, and a `usize` for remembering where we are in the vector. As we advance through the iterator we will increment this `usize`, and stop when it reaches the length of the vector. 
+
+The field is an `Option` type, which can either be `Some(x)` for some data `x`, or `None` indicating that there is nothing there. The option is important here because we do need to return something even when the key is absent and no `&'a K` even exists. We could change our `get` trait to return an `Option<Self::OutputIterator>`, or we can just make our iterator return nothing.
+
+Let's first write the `new` method we know we need:
+
+```rust
+impl<'a, K:'a, V:'a, T:'a> OutputIter<'a, K, V, T> {
+	pub fn new(input: Option<(&'a K, &'a Vec<(V, T, isize)>)>) -> Self {
+		OutputIter {
+			data: input.map(|(key, vec)| (key, vec, 0))
+		}
+	}
+}
+```
+
+Here we see for the first time struct field initialization; the `data` field of an `OutputIter`.
+We take in the type produced by `HashMap`'s hypothetical `get` method, and use `map` which applies some logic to the internals of an `Option` type, where in this case we've just put a zero in for the current position. In case `input` is `None`, we just end up with a `None` output and no logic applied.
+
+All we need to do to make `OutputIter` into an iterator is implement the `Iterator` trait. It's really not that hard; I've written the skeleton here to give you a sense for all that is needed:
+
+```rust
+impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
+
+	type Item = (&'a K, &'a V, &'a T, isize);
+
+	fn next(&mut self) -> Option<Self::Item> {
+
+	}
+
+}
+```
+
+An implementation needs to indicate the type of the `Item` it will enumerate, and a function that produces the next item or `None` if the iterator has finished. 
+
+```rust
+impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
+
+	type Item = (&'a K, &'a V, &'a T, isize);
+
+	fn next(&mut self) -> Option<Self::Item> {
+		if let Some((ref key, ref vec, ref mut pos)) = self.data {
+			if *pos < vec.len() {
+				*pos += 1;
+				let vtd = &vec[*pos-1];
+				Some((key, &vtd.0, &vtd.1, vtd.2))
+			}
+			else {
+				None
+			}
+		}
+		else {
+			None
+		}
+	}
+}
+```
+
+The `if let` construction is a neat thing Rust borrowed from Swift (perhaps "copied" would me more accurate, or "cloned" depending on your views on whether ideas have owners). The construct fires if the pattern matches, in this cas if `self.data` is in fact something. At the same time, it is binding `key`, `vec`, and `pos` to references to these fields. In the case of `pos` it is even a mutable reference. The `ref` keyword might be a bit confusing, but I guess the Rust folks thought it was better than `*`, which is logically what you want there (bind `key`, `val`, `pos` to things that derefence to the fields).
+
+This is really all it takes to implement an iterator. 
+
+If you use this type in your code, perhaps by calling `get` on our `HashMap` implementation of `Trace`, Rust will go track down this code and insert it anywhere you call `next`. For example, imagine your value and time types are stack-allocated, like maybe `u64`s or something, and you write the following code:
+
+```rust
+let mut dataz = Vec::new();
+for (k,v,t,d) in trace.get(&my_key) {
+	dataz.push(v.clone(), t.clone(), d);
+}
+```
+
+Rust is in principle, combined with the power of LLVM, able to realize that (i) if the iterator's `Option` is `Some` it stays `Some` and that test can be hoisted out of the loop, (ii) the "increment and test against length" pattern is just walking through an array, and (iii) your key, time, and delta accesses have the same layout as where they are stored. All of these combine to allow LLVM to optimize your loop down to a conditional `memcpy`, just checking if your key is present in the `HashMap` and then `memcpy`ing the results if so.
+
+That's pretty neat. It's the sort of thing you might implement by hand in other languages in order to have awesome performance. Instead, you can spend your time writing blog posts about how you don't necessarily need to do that any more.
+
+### The implementation
+
+In addition to the definition and implementation of `OutputIter`, here is our implementation of `Trace`. 
+
+```rust
+impl<'a, K:Ord+'a, V:Ord+'a, T:Lattice+'a> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
+
+	fn add<Iter: Iterator<Item=(K, V, T, isize)>>(&mut self, diffs: Iter) {
+		for (key, val, time, delta) in diffs {
+			self.entry(key)
+				.or_insert(Vec::new())
+				.push((val, time, delta));
+		}
+	}
+
+	type OutputIterator = OutputIter<'a, K, V, T>;
+
+	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
+		Self::OutputIterator::new(self.get(key))
+	}
+
+}
+```
+
+One last thing: to use `K` as a key in a `HashMap` it needs to implement `::std::hash::Hash`, the trait for hashing. So, we just `+` that into its constraints and we are good!
+
+### Wrap-up
+
+I hope this was somewhat informative about how to *implement* things in Rust. We saw some horrible sticky details in the interface mismatch between `HashMap` and `Trace`, where obviously I like my version more but the Rust folks probably have opinions too. My recollection is that they felt the ergonomics of `get` were important as `HashMap` would be used a lot, and so while expressivity is good too, overwhelming people in such a commonly used class might suck.
+
+In addition to the limited interface, there are other things not to like about a `HashMap` implementation. A `HashMap` uses a lot more memory than we want to use; if a key has just one value, well you can do the math on how much this requires (hint: lots). Also, `HashMap` maintains its keys in something of a weird order; it makes sense when you reverse it out, but it makes it painful to pre-arrange keys to provide sequential access. The `Vec` values also result in lots of random access as locality in the hash map means little for the memory they manage.
+
+## Part 2: A very naïve version based on lists.
+
+Let's write a relatively naïve implementation of our `Trace` trait using sorted lists.
+
+Actually, let's be just a bit smart and 
 
 Coming soon!
 
-## Part 2: Organizing the data into tries.
+## Part 3: Organizing the data into tries.
 
 Coming later!
 
-## Part 3: Adding an index.
+## Part 4: Adding an index.
 
 Coming even later!
