--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -62,7 +62,7 @@ pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 }
 ```
 
-Even just writing this much is helpful, because we have sorted out (or started too, at least) what needs to be true about the types we'll use.
+Even just writing this much is helpful, because we have sorted out (or started too, at least) what needs to be true about the types we will use.
 
 ### How about adding some methods? 
 
@@ -83,7 +83,7 @@ pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 
 You may notice the `&` sigil hanging around in a few places. We will get to that, but what it is saying is that when we call `add` or `get`, we are only temporarily working with `self`, the trace. Once the method returns, control of `self` returns too. Similarly, the use of `key` is only temporary access to the key. 
 
-This contrasts with `diffs` in `add`: there is no `&` in front of the type, which means that `diffs` is actually an *owned* vector; we get to do whatever we want with it (add things to it, de-allocate it, etc). This ownership is pretty handy, because it is transitive: `diffs` also owns all of the contents of the vector, meaning all those keys and values and times and stuff. We'll want to put those in our collection!
+This contrasts with `diffs` in `add`: there is no `&` in front of the type, which means that `diffs` is actually an *owned* vector; we get to do whatever we want with it (add things to it, de-allocate it, etc). This ownership is pretty handy, because it is transitive: `diffs` also owns all of the contents of the vector, meaning all those keys and values and times and stuff. We will want to put those in our collection!
 
 Looks pretty good! What's not to like? Well, there are a few things. 
 
@@ -219,7 +219,7 @@ pub trait Trace<'a, Key: Ord, Val: Ord, Time: Lattice> {
 }
 ```
 
-You might be a bit stressed that "how can we known which `'a` we will need" to which the answer is just "no worries, we'll implement the trait for all `'a`", which is a great thing that computers can do.
+You might be a bit stressed that "how can we known which `'a` we will need" to which the answer is just "no worries, we will implement the trait for all `'a`", which is a great thing that computers can do.
 
 What is the last remaining issue? The types parameters `Key`, `Val`, and `Time` need some more constraints on them now. 
 
@@ -257,7 +257,7 @@ This whole section may give some insight into the Rust debugging process. We hav
 
 ## Part 1: An obvious implementation based on `HashMap`
 
-Just to start things out, and before trying to be clever at all, let's write an implementation of our trait using Rust's built in `HashMap`. This implementation will be pretty simple, but wasteful with respect to memory usage, and misses out on some important properties we'll want for later on. But, it is a simple example of perhaps the most obvious implementation.
+Just to start things out, and before trying to be clever at all, let's write an implementation of our trait using Rust's built in `HashMap`. This implementation will be pretty simple, but wasteful with respect to memory usage, and misses out on some important properties we will want for later on. But, it is a simple example of perhaps the most obvious implementation.
 
 This also gives us a chance to see how to implement traits in Rust, before we start doing harder things.
 
@@ -293,7 +293,7 @@ impl<'a, K, V, T> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
 
 These `unimplemented!()` things are macros indicating the code isn't written yet. They are totally optional, but allow your code to compile without actually returning the right thing yet (`Self::OutputIterator`, which is also not written yet).
 
-### The `add` method
+#### The `add` method
 
 Here is what I would do for the `add` method: 
 
@@ -315,9 +315,11 @@ This was pretty painless, but we got lucky in a few ways. The `entry` method req
 
 If we tried to use the key twice we would get an error from Rust indicating that we are trying to re-use a variable which has been moved somewhere else. We could consider copying or cloning the key, but that functionality lies behind traits we haven't required of the type `K` yet.
 
-### The `get` method
+#### The `get` method
 
 The `get` method is going to turn into a pain in the butt, mostly because of the restrictive way Rust's `HashMap` is implemented. We will fight against it a little bit, explain how it could be done, and then walk away because we don't really want to be using `HashMap` anyhow.
+
+Here is what we would like to write:
 
 ```rust
 	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
@@ -325,9 +327,9 @@ The `get` method is going to turn into a pain in the butt, mostly because of the
 	}
 ```
 
-This looks up `key` in `self` and returns an `Option<&'a Vec<(V, T, isize)>>`. We can use that reference in our output iterator! In particular, a `&'a Vec<(V, T, isize)>` gives us access to all the `&'a V' and `&'a T' references contained therein.
+This looks up `key` in `self` and returns an `Option<&'a Vec<(V, T, isize)>>`. We can use that reference in our output iterator! In particular, a `&'a Vec<(V, T, isize)>` gives us access to all the `&'a V` and `&'a T` references contained therein.
 
-The problem is we don't have a `&'a K` anywhere. That `key` argument is a reference, but not with the right lifetime (remember the cautionary tale from the previous section?). The key obviously exists in the `HashMap`, we just can't get a reference to it, because the hash map's interface is a bit restrictive. There is a way to get a reference to a key once you've used the `entry` method up above, but that requires an owned key to call. We can't stash a second copy of the key in the list with the `(V, T, isize)` tuples because we can't copy or clone it.
+The problem is we don't have a `&'a K` anywhere. That `key` argument is a reference, but not with the right lifetime (remember the cautionary tale from the previous section?). The key obviously exists in the `HashMap`, but we can't get a reference to it because `HashMap`'s interface is a bit restrictive. There is a way to get a reference to a key once you've used the `entry` method up above, but that requires an owned key to call in the first place. We can't even stash a second copy of the key in the list with the `(V, T, isize)` tuples because we can't copy or clone it.
 
 Sucks. 
 
@@ -337,7 +339,7 @@ We could consider changing the iterator in the trait definition to be
 	Iter: Iterator<Item=(&'a V, &'a T, isize)>
 ```
 
-because we know that folks must have a `&K` on hand to call the `get` method. That isn't a horrible idea, but it is limiting; it means that if the user wants the key they either (i) need to use the iterator before moving on to the next key, or (ii) need to clone the key to hold on to it. This is annoying because we know there is a `&'a K` sitting in the hash map, it's just that the hashmap doesn't let us get a handle to it.
+because we know that users must have a `&K` on hand to call the `get` method. That isn't a horrible idea, but it is limiting; the user has to make sure to match up their keys with the iterators' values, even though we have a reference to the right key in the hash map.
 
 Since we aren't acutally going to use this version of the code, let's imagine that the `HashMap`'s `get` method return a reference to both the key and the value, rather than just the value. We still get to write:
 
@@ -351,7 +353,9 @@ because we are just passing the buck to the `OutputIterator` type's `new` method
 
 ### Implementing the types
 
-The `OutputIterator` type isn't going to be wildly complicated. In fact, we could possibly borrow some existing iterator implementations, but we will just roll our own to see how it works. It isn't very complicated. The first thing to do is to define the struct that holds the data we will need for iteration.
+The `OutputIterator` type isn't going to be wildly complicated. In fact, we could possibly borrow some existing iterator implementations, but we will just roll our own to see how it works. 
+
+The first thing to do is to define the struct that holds the data we will need for iteration.
 
 ```rust
 /// iterates over tuples of references
@@ -360,9 +364,9 @@ pub struct OutputIter<'a, K:'a, V:'a, T:'a> {
 }
 ```
 
-The `data` field here is, optionally, a triple of key reference, the vector we found, and a `usize` for remembering where we are in the vector. As we advance through the iterator we will increment this `usize`, and stop when it reaches the length of the vector. 
+The `data` field here is, optionally, a triple of: key reference, vector reference, and a `usize` for remembering where we are in the vector. As we advance through the iterator we will increment this `usize`, and stop when it reaches the length of the vector. 
 
-The field is an `Option` type, which can either be `Some(x)` for some data `x`, or `None` indicating that there is nothing there. The option is important here because we do need to return something even when the key is absent and no `&'a K` even exists. We could change our `get` trait to return an `Option<Self::OutputIterator>`, or we can just make our iterator return nothing.
+The field is an `Option` type, which can either be `Some(x)` for some data `x`, or `None` indicating that there is nothing there. The option is important here because `get` does need to return a valid instance of `OutputIter` even when the key is absent and no `&'a K` even exists. We could change our `get` trait to return an `Option<Self::OutputIterator>`, or we can just make our iterator return nothing.
 
 Let's first write the `new` method we know we need:
 
@@ -418,11 +422,11 @@ impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
 }
 ```
 
-The `if let` construction is a neat thing Rust borrowed from Swift (perhaps "copied" would me more accurate, or "cloned" depending on your views on whether ideas have owners). The construct fires if the pattern matches, in this cas if `self.data` is in fact something. At the same time, it is binding `key`, `vec`, and `pos` to references to these fields. In the case of `pos` it is even a mutable reference. The `ref` keyword might be a bit confusing, but I guess the Rust folks thought it was better than `*`, which is logically what you want there (bind `key`, `val`, `pos` to things that derefence to the fields).
+The `if let` construction is a neat thing Rust borrowed from Swift (perhaps "copied" would be more accurate, or "cloned" depending on your views on whether ideas have owners). The construct fires if the pattern matches, in this case if `self.data` is in fact something. At the same time, it binds `key`, `vec`, and `pos` to references to the fields of the something. In the case of `pos` it is even a mutable reference. The `ref` keyword might be a bit confusing, but I guess the Rust folks thought it was better than `*`, which is logically what you want there (bind `key`, `val`, `pos` to things that derefence to the fields).
 
-This is really all it takes to implement an iterator. 
+This trait implementation is all it takes to be an iterator. 
 
-If you use this type in your code, perhaps by calling `get` on our `HashMap` implementation of `Trace`, Rust will go track down this code and insert it anywhere you call `next`. For example, imagine your value and time types are stack-allocated, like maybe `u64`s or something, and you write the following code:
+If you use this type in your code, perhaps by calling `get` on our `HashMap` implementation of `Trace`, Rust will go track down this code and use it directly. For example, imagine your value and time types are stack-allocated, like maybe `u64`s or something, and you write the following code:
 
 ```rust
 let mut dataz = Vec::new();
@@ -431,7 +435,7 @@ for (k,v,t,d) in trace.get(&my_key) {
 }
 ```
 
-Rust is in principle, combined with the power of LLVM, able to realize that (i) if the iterator's `Option` is `Some` it stays `Some` and that test can be hoisted out of the loop, (ii) the "increment and test against length" pattern is just walking through an array, and (iii) your key, time, and delta accesses have the same layout as where they are stored. All of these combine to allow LLVM to optimize your loop down to a conditional `memcpy`, just checking if your key is present in the `HashMap` and then `memcpy`ing the results if so.
+In principle Rust (via LLVM) is able to realize that (i) if the iterator's `Option` is `Some` it stays `Some` and that test can be hoisted out of the loop, (ii) the "increment and test against length" pattern is just walking through an array, and (iii) your key, time, and delta accesses have the same layout as where they are stored. All of these combine to allow LLVM to optimize your loop down to a conditional `memcpy`, just checking if your key is present in the `HashMap` and then `memcpy`ing the results if so.
 
 That's pretty neat. It's the sort of thing you might implement by hand in other languages in order to have awesome performance. Instead, you can spend your time writing blog posts about how you don't necessarily need to do that any more.
 
@@ -459,7 +463,9 @@ impl<'a, K:Ord+'a, V:Ord+'a, T:Lattice+'a> Trace<'a, K, V, T> for HashMap<K, Vec
 }
 ```
 
-One last thing: to use `K` as a key in a `HashMap` it needs to implement `::std::hash::Hash`, the trait for hashing. So, we just `+` that into its constraints and we are good!
+One last error: to use `K` as a key in a `HashMap` it must implement `::std::hash::Hash`, the trait for hashing. So, we just `+` that into our constraints on `K` and we are good to go!
+
+Except that `HashMap` doesn't actually have the `get` method we wanted. Oh well.
 
 ### Wrap-up
 
@@ -467,11 +473,9 @@ I hope this was somewhat informative about how to *implement* things in Rust. We
 
 In addition to the limited interface, there are other things not to like about a `HashMap` implementation. A `HashMap` uses a lot more memory than we want to use; if a key has just one value, well you can do the math on how much this requires (hint: lots). Also, `HashMap` maintains its keys in something of a weird order; it makes sense when you reverse it out, but it makes it painful to pre-arrange keys to provide sequential access. The `Vec` values also result in lots of random access as locality in the hash map means little for the memory they manage.
 
-## Part 2: A very naïve version based on lists.
+## Part 2: A very naïve version based on sorted lists.
 
 Let's write a relatively naïve implementation of our `Trace` trait using sorted lists.
-
-Actually, let's be just a bit smart and 
 
 Coming soon!
 
